Se corrije un problema con la alerta de longitud de contraseña ya que no estaba debidamente referenciada al archivo strings.xml sino que estaba quemada en el codigo
Adicional se actualiza la versión en el gradle “versionName” a 2.0 y el “versionCode” a 2

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,6 +22,7 @@
     <string name="required_fields">All fields are required</string>
     <string name="pass_no_match">Passwords do not match</string>
     <string name="email_valid">Invalid Email</string>
+    <string name="pass_err">Password must be between 6 and 10 characters</string>
 
     <string name="nameShow">Name :</string>
     <string name="dateBirthShow">Date of Birth :</string>
